# CaseScope

./: .env.local.example  LICENSE  Makefile  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
client/: next.config.ts  package.json  pnpm-lock.yaml
client/src/app/: layout.tsx
client/src/components/: banner.tsx  nav-bar.tsx
client/src/lib/: issues-map.ts
client/supabase/migrations/: 20241218190417_create_issues_and_hearings_tables.sql
server/: pyproject.toml
src/app/: globals.css  layout.tsx  page.tsx
src/app/(protected)/: layout.tsx
src/app/data-sources/: page.tsx
src/app/explore/: page.tsx
src/app/new-case/: page.tsx
src/components/: banner.tsx  display-file-processing-status.tsx  display-value.tsx  file-uploader.tsx  login-form.tsx  nav-bar.tsx  providers.tsx
src/components/navigation/: mobile-nav-bar.tsx  nav-bar.tsx  navigation-items.ts
src/components/ui/: accordion.tsx  ag-table.tsx  data-table.tsx  dialog.tsx  radio-group-cards-row.tsx  (+3 more)
src/inngest/: client.ts  functions.ts
src/lib/: queries.ts  utils.ts
src/providers/: app-store-provider.tsx  pdf-worker-provider.tsx  query-client-provider.tsx  user-provider.tsx
src/stores/: app-store.ts
src/types/: extractor.ts  inngest.ts  issue.ts
supabase/: config.toml
supabase/migrations/: 20241218190417_create_issues_and_hearings_tables.sql  20241223052735_create_tables.sql  20241225003019_create_documents_policy.sql  20241225024505_delete_url_column.sql  20250103051007_create_public_tables.sql  20250105040247_anon_policies.sql  20250105041431_public_docs_rls.sql
(+48 files in other folders)
