[tool.poetry]
name = "app"
version = "0.1.0"
description = "API for extracting key info from past cases"
authors = ["Helen Kochetkova <helkochetkova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.35.85"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
